// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentWrapper component should render correctly with props 1`] = `
<div
  className="sc-hKwDye cOPMSI"
/>
`;

exports[`ContentWrapper component should render correctly without props 1`] = `
<div
  className="sc-hKwDye gfSUpe"
/>
`;
